JFrame on Windows doesn't animate when setting ICONIFIED state

XMLWordPrintable

    • b96
    • x86
    • windows_8

        FULL PRODUCT VERSION :
        java version "1.7.0_51"
        Java(TM) SE Runtime Environment (build 1.7.0_51-b13)
        Java HotSpot(TM) Client VM (build 24.51-b03, mixed mode, sharing)

        ADDITIONAL OS VERSION INFORMATION :
        Microsoft Windows [Version 6.3.9600]

        A DESCRIPTION OF THE PROBLEM :
        When setting the state on a JFrame to ICONIFIED on Java7 you don't see the transition animation as the window is minimized. This was working in Java6.

        REGRESSION. Last worked in version 6u45

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        Compile the provided code and run in Java7 on windows you won't see a transition animation when the window minimizes.

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        Normal windows transition animation as the frame minimizes
        ACTUAL -
        No transition animation

        REPRODUCIBILITY :
        This bug can be reproduced always.

        ---------- BEGIN SOURCE ----------
        import javax.swing.*;
        import java.awt.*;

        public class testFrameMin {
            public static void main(String[] args) {
                JFrame frame = new JFrame();
                frame.setSize( 800, 600 );
                frame.setVisible(true);
                try { Thread.sleep( 1000 ); } catch ( Throwable t ) {}
                frame.setExtendedState(Frame.ICONIFIED);
            }
        }
        ---------- END SOURCE ----------

              Assignee:
              Rajeev Chamyal (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: