8037575: JFrame on Windows doesn't animate when setting ICONIFIED state

Reviewed-by: azvegint, alexsch