jdk/src/java.desktop/windows/native/libawt/windows/awt_Frame.cpp
@@ -1372,7 +1372,7 @@ void AwtFrame::_SetState(void *param)
             } else { // zoom == iconify == FALSE
                 wp.showCmd = focusable ? SW_RESTORE : SW_SHOWNOACTIVATE;
             }
-
+            ::ShowWindow(hwnd, wp.showCmd);
             if (zoom && iconify) {
                 wp.flags |= WPF_RESTORETOMAXIMIZED;
             } else {
